Server/esp_server/build/log/idf_py_stderr_output_35563
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_task':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:218:18: error: expected ';' before 'while'
  218 |         filenum++ // next file will be named file-(filenum + 1).txt
      |                  ^
      |                  ;
  219 | 
  220 |         while (1) {
      |         ~~~~~     
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:242:27: error: 'response' undeclared (first use in this function)
  242 |         send(client_sock, response, strlen(response), 0);
      |                           ^~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:242:27: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:94:13: warning: 'wifi_init_softap' defined but not used [-Wunused-function]
   94 | static void wifi_init_softap() {
      |             ^~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   42 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:41:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   41 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:40:16: warning: 'read_buffer' defined but not used [-Wunused-variable]
   40 | static uint8_t read_buffer[BUFFER_SIZE];  // Buffer for reading incoming data
      |                ^~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
